Fixed a wrong color

--- a/sass/components/_base.scss
+++ b/sass/components/_base.scss
@@ -130,7 +130,7 @@ nav ul a:hover {
 }
 .fa-sm{
     font-size: 0.8em;
-    color: #daa520;    
+    color: $gold;    
 }
 .rect {
     text-align: center;
