--- a/styles/main.css
+++ b/styles/main.css
@@ -128,7 +128,7 @@ nav ul a:hover {
 
 .fa-sm {
   font-size: 0.8em;
-  color: #daa520; }
+  color: #e4bb54; }
 
 .rect {
   text-align: center;
